POWR-983-2 Apply card template content, group, and taxonomy

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
@@ -35,7 +35,7 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: cloudy_card--small
+      id: cloudy_card
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -51,9 +51,9 @@ third_party_settings:
           layout_class: {  }
     regions:
       first:
-        - label
-      second:
         - field_featured_media
+      second:
+        - label
 id: group.bureau_office.featured
 targetEntityType: group
 bundle: bureau_office
@@ -61,7 +61,7 @@ mode: featured
 content:
   field_featured_media:
     type: entity_reference_entity_view
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       view_mode: featured
@@ -74,11 +74,11 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-    region: second
+    region: first
   label:
     type: string
-    weight: 0
-    region: first
+    weight: 1
+    region: second
     label: hidden
     settings:
       link_to_entity: true
