--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -42,7 +42,6 @@ third_party_settings:
         - field_summary
         - group_site_menu_entity_view_1
         - field_featured_content
-        - group_card_wrapper
         - field_featured_groups
         - field_start_date
         - field_end_date
@@ -55,15 +54,16 @@ third_party_settings:
       weight: 1
       format_type: html_element
       format_settings:
-        id: ''
-        classes: 'project-dates h4'
+        label: Date
         element: div
         show_label: false
         label_element: h3
         attributes: ''
         effect: none
         speed: fast
-      label: 'Start to end date'
+        id: ''
+        classes: 'event--date pb-2'
+      label: Date
       region: content
 id: group.project.default
 targetEntityType: group
@@ -74,7 +74,7 @@ content:
     type: datetime_default
     weight: 20
     region: content
-    label: inline
+    label: hidden
     settings:
       timezone_override: ''
       format_type: month_day_year
@@ -83,8 +83,8 @@ content:
         ft:
           id: expert
           settings:
-            lb: through
-            prefix: ''
+            lb: End
+            prefix: through
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -159,7 +159,7 @@ content:
     region: content
   field_start_date:
     weight: 19
-    label: inline
+    label: hidden
     settings:
       timezone_override: ''
       format_type: month_day_year
@@ -168,8 +168,8 @@ content:
         ft:
           id: expert
           settings:
-            lb: ''
-            prefix: '<i class="fas fa-calendar"></i>'
+            lb: Start
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
