--- a/web/sites/default/config/core.entity_view_display.group.project.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.featured.yml
@@ -29,7 +29,7 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: cloudy_card--small
+      id: cloudy_card
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -45,16 +45,16 @@ third_party_settings:
           layout_class: {  }
     regions:
       first:
-        - label
-      second:
         - field_featured_media
+      second:
+        - label
 id: group.project.featured
 targetEntityType: group
 bundle: project
 mode: featured
 content:
   field_featured_media:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       view_mode: featured
@@ -68,11 +68,11 @@ content:
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
-    region: second
+    region: first
   label:
     type: string
-    weight: 0
-    region: first
+    weight: 1
+    region: second
     label: hidden
     settings:
       link_to_entity: true
