--- a/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
@@ -29,7 +29,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_card--small
+      id: cloudy_card
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -44,7 +44,7 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      first:
+      second:
         - node_title
     fields:
       node_title:
