--- a/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_reviewer
+    - field.field.node.city_service.field_search_keywords
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
@@ -28,7 +29,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_card--small
+      id: cloudy_card
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -43,7 +44,7 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      first:
+      second:
         - node_title
     fields:
       node_title:
@@ -75,6 +76,7 @@ hidden:
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_service_mode: true
   field_summary: true
   field_time_to_complete: true
