--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -44,25 +44,26 @@ third_party_settings:
       content:
         - field_featured_media
         - field_start_date
-        - group_date_and_time
+        - group_datetime
         - field_end_date
+        - group_date_and_time
+        - field_all_day
         - group_start_to_end_time
         - field_event_location
-        - field_all_day
-        - field_summary
         - field_start_time
-        - field_body_content
+        - field_summary
         - field_end_time
+        - field_body_content
   field_group:
     group_date_and_time:
       children:
         - field_start_date
         - field_end_date
-      parent_name: ''
-      weight: 1
+      parent_name: group_datetime
+      weight: 2
       format_type: html_element
       format_settings:
-        label: 'Start to end date'
+        label: Date
         element: div
         show_label: false
         label_element: h3
@@ -70,19 +71,19 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: 'event--date h4'
-      label: 'Start to end date'
+        classes: event--date
+      label: Date
       region: content
     group_start_to_end_time:
       children:
         - field_all_day
         - field_start_time
         - field_end_time
-      parent_name: ''
-      weight: 2
+      parent_name: group_datetime
+      weight: 3
       format_type: html_element
       format_settings:
-        label: 'Start to end time'
+        label: Time
         element: div
         show_label: false
         label_element: h3
@@ -90,8 +91,27 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: 'event--time h4 mb-4'
-      label: 'Start to end time'
+        classes: 'event--time '
+      label: Time
+      region: content
+    group_datetime:
+      children:
+        - group_date_and_time
+        - group_start_to_end_time
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        label: Datetime
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: mb-2
+      label: Datetime
       region: content
 id: node.event.default
 targetEntityType: node
@@ -113,7 +133,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: '<i class="fas fa-clock"></i> '
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -123,7 +143,6 @@ content:
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
             fi-el: span
             fi-cl: all-day
             fi-at: ''
@@ -135,10 +154,11 @@ content:
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
   field_body_content:
     type: text_default
-    weight: 5
+    weight: 6
     region: content
     label: hidden
     settings: {  }
@@ -165,7 +185,6 @@ content:
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
             fi-el: span
             fi-cl: 'event--end-date pl-1'
             fi-at: ''
@@ -177,6 +196,7 @@ content:
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
     type: datetime_default
     region: content
@@ -184,14 +204,14 @@ content:
     weight: 5
     label: hidden
     settings:
-      time_format: '\t\o g:i A'
+      time_format: 'g:i a'
     third_party_settings:
       ds:
         ft:
           id: expert
           settings:
             lb: ''
-            prefix: ''
+            prefix: to
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -201,7 +221,6 @@ content:
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
             fi-el: span
             fi-cl: 'event--end-time pl-1'
             fi-at: ''
@@ -213,12 +232,13 @@ content:
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
     type: time_formatter
     region: content
   field_event_location:
     type: entity_reference_revisions_entity_view
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       view_mode: default
@@ -239,7 +259,7 @@ content:
     region: content
     label: hidden
     settings:
-      view_mode: banner
+      view_mode: featured
       link: false
     third_party_settings:
       ds:
@@ -249,56 +269,12 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_search_keywords:
-    weight: 6
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_start_date:
     weight: 0
     label: hidden
     settings:
       timezone_override: ''
       format_type: month_day_year
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: '<i class="fas fa-calendar"></i>'
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: span
-            fi-cl: 'event--start-date pl-2'
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
-    type: datetime_default
-    region: content
-  field_start_time:
-    weight: 4
-    label: hidden
-    settings:
-      time_format: 'g:i A'
     third_party_settings:
       ds:
         ft:
@@ -315,7 +291,42 @@ content:
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+    type: datetime_default
+    region: content
+  field_start_time:
+    weight: 4
+    label: hidden
+    settings:
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
             fi-el: span
             fi-cl: 'event--start-time pl-2'
             fi-at: ''
@@ -327,11 +338,12 @@ content:
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
     type: time_formatter
     region: content
   field_summary:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       link_to_entity: false
@@ -372,4 +384,5 @@ hidden:
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   links: true
