--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -22,7 +22,9 @@ dependencies:
   module:
     - datetime
     - ds
+    - field_group
     - panelizer
+    - portland
     - time_field
     - user
 third_party_settings:
@@ -31,6 +33,142 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      first:
+        - field_featured_media
+      second:
+        - field_start_date
+        - field_end_date
+        - group_date
+        - 'bundle_field:node'
+        - group_time
+        - node_title
+        - field_all_day
+        - group_datetime
+        - field_summary
+        - field_start_time
+        - field_end_time
+    fields:
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
+        weight: 3
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+      node_title:
+        plugin_id: node_title
+        weight: 4
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_group:
+    group_datetime:
+      children:
+        - group_date
+        - group_time
+      parent_name: ''
+      weight: 5
+      format_type: html_element
+      format_settings:
+        label: Datetime
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: mb-2
+      label: Datetime
+      region: hidden
+    group_date:
+      children:
+        - field_start_date
+        - field_end_date
+      parent_name: group_datetime
+      weight: 2
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: event--date
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Date
+      region: hidden
+    group_time:
+      children:
+        - field_all_day
+        - field_start_time
+        - field_end_time
+      parent_name: group_datetime
+      weight: 3
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: event--time
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Time
+      region: hidden
 id: node.event.search_result
 targetEntityType: node
 bundle: event
@@ -39,7 +177,7 @@ content:
   field_all_day:
     type: boolean
     weight: 5
-    region: content
+    region: second
     label: hidden
     settings:
       format: custom
@@ -48,61 +186,187 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: expert
           settings:
             lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: span
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
             lb-col: false
-            classes: {  }
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
   field_end_date:
     type: datetime_default
-    weight: 3
-    region: content
-    label: inline
+    weight: 2
+    region: second
+    label: hidden
     settings:
       timezone_override: ''
-      format_type: medium
+      format_type: month_day_year
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: expert
           settings:
-            lb: Ends
+            lb: ''
+            prefix: to
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: span
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
             lb-col: false
-            classes: {  }
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
   field_end_time:
     type: time_formatter
-    weight: 4
-    region: content
+    weight: 7
+    region: second
     label: hidden
     settings:
-      time_format: 'h:i a'
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: to
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: span
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+  field_featured_media:
+    type: portland_plural_label
+    weight: 0
+    region: first
+    label: above
+    settings: {  }
     third_party_settings: {  }
   field_start_date:
     type: datetime_default
     weight: 1
-    region: content
-    label: inline
+    region: second
+    label: hidden
     settings:
       timezone_override: ''
-      format_type: medium
+      format_type: month_day_year
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: expert
           settings:
-            lb: Starts
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: span
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
             lb-col: false
-            classes: {  }
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
   field_start_time:
     type: time_formatter
-    weight: 2
-    region: content
+    weight: 6
+    region: second
     label: hidden
     settings:
-      time_format: 'h:i a'
-    third_party_settings: {  }
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: span
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
   field_summary:
-    weight: 0
+    weight: 6
     label: hidden
     settings:
       link_to_entity: false
@@ -136,17 +400,14 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: string
-    region: content
+    region: second
 hidden:
   content_moderation_control: true
   field_body_content: true
   field_event_location: true
-  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
-  field_start_date: true
-  field_start_time: true
   links: true
