--- a/web/sites/default/config/core.entity_view_display.node.page.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.featured.yml
@@ -29,7 +29,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_card--small
+      id: cloudy_card
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -45,13 +45,13 @@ third_party_settings:
           layout_class: {  }
     regions:
       first:
-        - node_title
-      second:
         - field_featured_media
+      second:
+        - node_title
     fields:
       node_title:
         plugin_id: node_title
-        weight: 0
+        weight: 1
         label: hidden
         formatter: default
         settings:
@@ -70,7 +70,7 @@ bundle: page
 mode: featured
 content:
   field_featured_media:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       view_mode: featured
@@ -84,7 +84,7 @@ content:
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
-    region: second
+    region: first
 hidden:
   content_moderation_control: true
   field_audience: true
