--- a/web/sites/default/config/views.view.events_index.yml
+++ b/web/sites/default/config/views.view.events_index.yml
@@ -88,9 +88,7 @@ display:
               code_section: default
               code_title: default
               development_permit: default
-              event: search_result
-              guide: default
-              information: default
+              event: teaser
               news: default
               page: default
             'entity:taxonomy_term':
