--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -5,10 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.featured
     - core.entity_view_mode.node.teaser
-    - field.storage.node.field_body
   module:
     - datetime
-    - entity_reference_revisions
     - group
     - node
     - user
@@ -521,7 +519,7 @@ display:
         type: 'entity:node'
         options:
           relationship: none
-          view_mode: featured
+          view_mode: teaser
     cache_metadata:
       max-age: -1
       contexts:
@@ -556,6 +554,7 @@ display:
         row: false
         filters: false
         filter_groups: false
+        css_class: false
       link_display: page_1
       link_url: ''
       use_more: true
@@ -696,6 +695,7 @@ display:
           1: AND
       block_hide_empty: true
       display_description: ''
+      css_class: ''
     cache_metadata:
       max-age: -1
       contexts:
@@ -1215,6 +1215,4 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_body'
-        - extensions
+      tags: {  }
