--- a/web/sites/default/config/views.view.related.yml
+++ b/web/sites/default/config/views.view.related.yml
@@ -223,7 +223,7 @@ display:
       filter_groups:
         operator: AND
         groups: {  }
-      css_class: card-group--related
+      css_class: ''
     cache_metadata:
       max-age: -1
       contexts:
