--- a/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
@@ -6,16 +6,19 @@ dependencies:
     - core.entity_view_mode.node.search_result
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_group
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_reviewer
+    - field.field.node.city_service.field_search_keywords
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -24,6 +27,75 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      second:
+        - 'bundle_field:node'
+        - node_title
+        - field_summary
+    fields:
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+      node_title:
+        plugin_id: node_title
+        weight: 1
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.city_service.search_result
 targetEntityType: node
 bundle: city_service
@@ -64,15 +136,17 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: string
-    region: content
+    region: second
 hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
+  field_group: true
   field_legacy_path: true
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_service_mode: true
   field_time_to_complete: true
   field_topics: true
