--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -7,14 +7,20 @@ dependencies:
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
+    - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
+    - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
+    - field.field.node.news.field_search_keywords
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
+    - datetime
+    - ds
+    - field_group
     - panelizer
     - user
 third_party_settings:
@@ -23,20 +29,37 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.news.search_result
-targetEntityType: node
-bundle: news
-mode: search_result
-content:
-  field_summary:
-    type: string
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      first:
+        - field_featured_media
+      second:
+        - 'bundle_field:node'
+        - node_title
+        - group_date
+        - field_summary
+        - field_published_on
+    fields:
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
+        weight: 1
+        label: hidden
+        formatter: default
         ft:
           id: expert
           settings:
@@ -52,8 +75,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: p
-            fi-cl: ''
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
             fi-at: ''
             suffix: ''
             lbw: false
@@ -64,6 +87,112 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
+      node_title:
+        plugin_id: node_title
+        weight: 2
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_group:
+    group_date:
+      children:
+        - field_published_on
+      parent_name: ''
+      weight: 3
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: mb-2
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Date
+      region: hidden
+id: node.news.search_result
+targetEntityType: node
+bundle: news
+mode: search_result
+content:
+  field_featured_media:
+    type: entity_reference_entity_view
+    weight: 0
+    region: first
+    label: hidden
+    settings:
+      view_mode: embedded_50
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_published_on:
+    type: datetime_default
+    weight: 4
+    region: second
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: 'Published on'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: div
+            ow-cl: mb-2
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+  field_summary:
+    type: string
+    weight: 4
+    region: second
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   content_moderation_control: true
   field_body_content: true
@@ -71,8 +200,8 @@ hidden:
   field_feature_until: true
   field_group: true
   field_legacy_path: true
-  field_published_on: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_topics: true
   links: true
