--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -7,15 +7,20 @@ dependencies:
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
+    - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
     - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
+    - field.field.node.news.field_search_keywords
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
+    - datetime
+    - ds
+    - field_group
     - panelizer
     - user
 third_party_settings:
@@ -24,15 +29,126 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      first:
+        - field_featured_media
+      second:
+        - node_title
+        - group_date
+        - field_published_on
+        - field_summary
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 1
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h2
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_group:
+    group_date:
+      children:
+        - field_published_on
+      parent_name: ''
+      weight: 2
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: mb-2
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Date
+      region: hidden
 id: node.news.teaser
 targetEntityType: node
 bundle: news
 mode: teaser
 content:
+  field_featured_media:
+    type: entity_reference_entity_view
+    weight: 0
+    region: first
+    label: hidden
+    settings:
+      view_mode: embedded_50
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_published_on:
+    type: datetime_default
+    weight: 3
+    region: second
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: 'Published on'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
   field_summary:
     type: string
-    weight: 0
-    region: content
+    weight: 4
+    region: second
     label: hidden
     settings:
       link_to_entity: false
@@ -72,8 +188,8 @@ hidden:
   field_feature_until: true
   field_group: true
   field_legacy_path: true
-  field_published_on: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_topics: true
   links: true
