--- a/web/sites/default/config/core.entity_view_display.node.page.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.related.yml
@@ -10,8 +10,10 @@ dependencies:
     - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
+    - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
     - field.field.node.page.field_reviewer
+    - field.field.node.page.field_search_keywords
     - field.field.node.page.field_summary
     - field.field.node.page.field_topics
     - node.type.page
@@ -27,7 +29,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_card--small
+      id: cloudy_card
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -43,6 +45,8 @@ third_party_settings:
           layout_class: {  }
     regions:
       first:
+        - field_featured_media
+      second:
         - node_title
     fields:
       node_title:
@@ -64,18 +68,34 @@ id: node.page.related
 targetEntityType: node
 bundle: page
 mode: related
-content: {  }
+content:
+  field_featured_media:
+    type: entity_reference_entity_view
+    weight: 0
+    region: first
+    label: hidden
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
-  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_page_type: true
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_summary: true
   field_topics: true
   links: true
