--- a/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
@@ -5,10 +5,15 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.page.field_audience
+    - field.field.node.page.field_body_content
+    - field.field.node.page.field_featured_media
+    - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
+    - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
     - field.field.node.page.field_reviewer
+    - field.field.node.page.field_search_keywords
     - field.field.node.page.field_summary
     - field.field.node.page.field_topics
     - node.type.page
@@ -22,15 +27,57 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      first:
+        - field_featured_media
+      second:
+        - field_page_type
+        - node_title
+        - field_summary
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 2
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.page.search_result
 targetEntityType: node
 bundle: page
 mode: search_result
 content:
-  field_page_type:
-    weight: 1
+  field_featured_media:
+    type: entity_reference_entity_view
+    weight: 0
+    region: first
     label: hidden
     settings:
+      view_mode: featured
       link: false
     third_party_settings:
       ds:
@@ -40,10 +87,44 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+  field_page_type:
     type: entity_reference_label
-    region: content
+    weight: 1
+    region: second
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
   field_summary:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
@@ -56,14 +137,16 @@ content:
             lb-col: false
             classes: {  }
     type: string
-    region: content
+    region: second
 hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
   field_group: true
   field_legacy_path: true
+  field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_topics: true
   links: true
