POWR-983-2 Lowercase am/pm format

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -1068,7 +1068,7 @@ display:
           click_sort_column: value
           type: time_formatter
           settings:
-            time_format: 'g:i A'
+            time_format: 'g:i a'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -1131,7 +1131,7 @@ display:
           click_sort_column: value
           type: time_formatter
           settings:
-            time_format: 'g:i A'
+            time_format: 'g:i a'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -1639,7 +1639,7 @@ display:
           click_sort_column: value
           type: time_formatter
           settings:
-            time_format: 'g:i A'
+            time_format: 'g:i a'
           group_column: value
           group_columns: {  }
           group_rows: true
