POWR-983-2 Update group event layout to match card template

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -963,7 +963,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time">{{ field_all_day }}</p>'
+            text: '{{ field_all_day }}'
             make_link: false
             path: ''
             absolute: false
@@ -1091,7 +1091,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time">{{ field_start_time }}{{ field_end_time }}</p>'
+            text: '{{ field_start_time }}{{ field_end_time }}'
             make_link: false
             path: ''
             absolute: false
@@ -1282,7 +1282,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"event--summary\">\r\n  <div class=\"row\">\r\n    <div class=\"col-12 col-md-8\">\r\n      <h4>{{ title }}</h4>\r\n      <p>{{ field_summary }}</p>\r\n    </div>\r\n    <div class=\"col-12 col-md-4\">\r\n      {{ field_all_day }}{{ field_start_time }}\r\n    </div>\r\n  </div>\r\n</div>"
+            text: "<div class=\"row\">\r\n  <div class=\"col-12\">\r\n    <h4>{{ title }}</h4>\r\n    <div class=\"event--time mb-2\">{{ field_all_day }}{{ field_start_time }}</div>\r\n    <p>{{ field_summary }}</p>\r\n  </div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -1534,7 +1534,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time">{{ field_all_day }}</p>'
+            text: '{{ field_all_day }}'
             make_link: false
             path: ''
             absolute: false
@@ -1662,7 +1662,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time">{{ field_start_time }}{{ field_end_time }}</p>'
+            text: '{{ field_start_time }}{{ field_end_time }}'
             make_link: false
             path: ''
             absolute: false
@@ -1853,7 +1853,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"event--summary\">\r\n  <div class=\"row\">\r\n    <div class=\"col-12 col-md-8\">\r\n      <h3>{{ title }}</h3>\r\n      <p>{{ field_summary }}</p>\r\n    </div>\r\n    <div class=\"col-12 col-md-4\">\r\n      {{ field_all_day }}{{ field_start_time }}\r\n    </div>\r\n  </div>\r\n</div>"
+            text: "<div class=\"row\">\r\n  <div class=\"col-12\">\r\n    <h4>{{ title }}</h4>\r\n    <div class=\"event--time mb-2\">{{ field_all_day }}{{ field_start_time }}</div>\r\n    <p>{{ field_summary }}</p>\r\n  </div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
