POWR-983-2 Update featured news template

--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -31,7 +31,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_card_featured
+      id: cloudy_card
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -98,7 +98,7 @@ content:
     region: first
     label: hidden
     settings:
-      view_mode: embedded_50
+      view_mode: featured
       link: false
     third_party_settings:
       ds:
