--- a/web/sites/default/config/field.field.node.charter_article.field_numeric_order.yml
+++ b/web/sites/default/config/field.field.node.charter_article.field_numeric_order.yml
@@ -17,7 +17,7 @@ entity_type: node
 bundle: charter_article
 label: 'Numeric order'
 description: 'Sets the absolute order of all articles within a City Charter chapter. These values are used for constructing the path alias for all content within the Charter. (i.e. /charter/1/1/101 or /charter/3/1/101)'
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
