--- a/web/sites/default/config/field.field.node.code_chapter.field_numeric_order.yml
+++ b/web/sites/default/config/field.field.node.code_chapter.field_numeric_order.yml
@@ -17,7 +17,7 @@ entity_type: node
 bundle: code_chapter
 label: 'Numeric order'
 description: 'Sets the absolute order of all chapters within a City Code title. These values are used for constructing the path alias for all content within the Code. (i.e. 1.01.010 is /code/1/1/10 or 3.04.010 is /code/3/4/10)'
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
