POWR-1069 Send badge e-mail on submission updated

--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -255,6 +255,7 @@ handlers:
     settings:
       states:
         - completed
+        - updated
       to_mail: '[webform_submission:values:contact_email:raw]'
       to_options: {  }
       cc_mail: ''
