POWR-1069 Add Greg Raisman to notification e-mail

--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -219,7 +219,7 @@ handlers:
     settings:
       states:
         - completed
-      to_mail: michael.mcdonald@portlandoregon.gov
+      to_mail: 'michael.mcdonald@portlandoregon.gov,greg.raisman@portlandoregon.gov'
       to_options: {  }
       cc_mail: ''
       cc_options: {  }
