--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -96,6 +96,8 @@ hidden:
   field_enable_programs_menu_item: true
   field_enable_projects_menu_item: true
   field_enable_services_and_inform: true
+  field_featured_content: true
+  field_featured_groups: true
   field_featured_media: true
   field_legacy_path: true
   field_logo: true
