POWR-1093 technicall I fixed this upstream, but it is easier to just add another commit.

--- a/web/sites/default/config/entity_browser.browser.media_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.media_browser.yml
@@ -22,23 +22,6 @@ selection_display_configuration: {  }
 widget_selector: tabs
 widget_selector_configuration: {  }
 widgets:
-  8b142f33-59d1-47b1-9e3a-4ae85d8376fa:
-    settings:
-      submit_text: Place
-      form_mode: media_browser
-    uuid: 8b142f33-59d1-47b1-9e3a-4ae85d8376fa
-    weight: -8
-    label: 'Create embed'
-    id: embed_code
-  044d2af7-314b-4830-8b6d-64896bbb861e:
-    settings:
-      submit_text: Place
-      form_mode: media_browser
-      return_file: false
-    uuid: 044d2af7-314b-4830-8b6d-64896bbb861e
-    weight: -9
-    label: Upload
-    id: file_upload
   af6edb39-7d23-4cec-95fa-4eb339650fda:
     settings:
       view: media
@@ -49,3 +32,23 @@ widgets:
     weight: -10
     label: Library
     id: view
+  8b142f33-59d1-47b1-9e3a-4ae85d8376fa:
+    settings:
+      submit_text: Place
+      target_bundles: {  }
+      form_mode: media_browser
+    uuid: 8b142f33-59d1-47b1-9e3a-4ae85d8376fa
+    weight: -8
+    label: 'Create embed'
+    id: embed_code
+  044d2af7-314b-4830-8b6d-64896bbb861e:
+    settings:
+      submit_text: Place
+      target_bundles: {  }
+      form_mode: media_browser
+      return_file: false
+      upload_validators: {  }
+    uuid: 044d2af7-314b-4830-8b6d-64896bbb861e
+    weight: -9
+    label: Upload
+    id: file_upload
